--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -88,6 +88,7 @@ number.all.users=The number of all users:
 number.all.books=The number of all books:
 number.users.with.user=The number of users in the <code>USER</code> role:
 number.users.with.manager=The number of users in the <code>MANAGER</code> role:
+number.users.with.admin=The number of users in the <code>ADMIN</code> role:
 role=role:
 #successfully
 full.name.changed=Your full name is successfully changed
