--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -88,6 +88,7 @@ number.all.users=Barcha foydalanuvchilar soni:
 number.all.books=Barcha kitoblar soni:
 number.users.with.user=<code>USER</code> rolidagi foydalanuvchilar soni:
 number.users.with.manager=<code>MANAGER</code> rolidagi foydalanuvchilar soni:
+number.users.with.admin=<code>ADMIN</code> rolidagi foydalanuvchilar soni:
 role=rol
 #successfully
 full.name.changed=To'liq ismingiz muvaffaqiyatli o'zgartirildi
